examples/smlfmt-1.2.0/test/fail/bad-local-in-end-3.sml
local
  val x = 2
  local
    val y = 3
  in
    val q = 5
  end
  end
in
  val z = 4
end
